# job-radar

./: .dockerignore  .env.example  .env.gcp.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.yml  index.html  pyproject.toml  render.yaml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml  secrets.example.toml
benchmarks/: rag_retrieval_baseline.json
docs/: ai_eval_dataset_spec.md  ai_mainline_summary.md  ai_rag_llm_roadmap.md  ai_thesis_abstract_draft.md  ai_thesis_abstract_en_draft.md  ai_thesis_advisor_progress_summary.md  ai_thesis_chapter1_draft.md  ai_thesis_chapter2_citation_template.md  ai_thesis_chapter2_draft.md  ai_thesis_chapter2_framework.md  ai_thesis_chapter2_literature_search_plan.md  ai_thesis_chapter3_draft.md  ai_thesis_chapter4_draft.md  ai_thesis_chapter5_draft.md  ai_thesis_chapter5_tables.md  ai_thesis_chapter6_draft.md  ai_thesis_figure_3_1_system_architecture.md  ai_thesis_figure_4_1_evaluation_flow.md  ai_thesis_figures_tables_plan.md  ai_thesis_final_assembly_checklist.md  ai_thesis_final_edit_checklist.md  ai_thesis_master_draft.md  ai_thesis_master_draft_merge_order.md  ai_thesis_outline.md  ai_thesis_term_style_guide.md  architecture.md  backend_runbook.md  bigquery_learning_guide.md  database_report_web.html  deployment_runbook.md  maintenance_guide.md  product_readiness_and_system_flow.md  review_report.md
docs/thesis_latex/: README.md  main.tex  references.bib
docs/thesis_word/: README.md  (+1 more)
job-radar-eval/: README.md
scripts/: benchmark_chunking_strategies.py  export_bigquery_learning_bundle.py  generate_job_radar_gcp_ai_role_deck.py  generate_job_radar_helixgpt_agent_deck.py  generate_job_radar_interview_deck.py  generate_job_radar_thesis_interview_deck.py  generate_system_design_diagram_images.py  install_launch_agents.sh  refresh_ui_practice_html.py  run_auth_secrets_sync.sh  run_backend_maintenance.sh  run_backend_status.sh  run_crawl_scheduler.sh  run_crawl_worker.sh  run_restore_drill.sh  run_sqlite_backup.sh  start_backend_stack.sh  start_crawl_scheduler.sh  start_crawl_worker.sh  start_streamlit.sh  sync_launchd_runtime.sh  train_salary_estimator.py  update_ui_ai_docs.py
tests/: test_analysis.py  test_assistant_agent.py  test_assistant_profile_merge.py  test_auth_persistence.py  test_auth_reset_views.py  test_auth_secrets.py  test_auth_state.py  test_backend_maintenance_service.py  test_backend_operations_service.py  test_backend_status_cli.py  test_backend_status_service.py  test_bootstrap_user_context.py  test_chunking_eval.py  test_connectors.py  test_crawl_application_service.py  test_crawl_runtime_flow.py  test_crawl_scheduler.py  test_crawl_tuning.py  test_crawl_worker.py  test_detail_parsing.py  test_fine_tuning_dashboard_data.py  test_job_cleaning.py  test_line_webhook.py  test_loading_shell.py  test_logging_utils.py  test_market_history_store.py  test_notification_service.py  test_observability.py  test_pipeline.py  test_pipeline_staging.py  test_post_training_colab.py  test_post_training_local_eval.py  test_post_training_pipeline.py  test_product_store.py  test_query_runtime.py  test_rag_assistant.py  test_resume_analysis.py  test_runtime_maintenance_service.py  test_salary_prediction.py  test_search_keyword_recommender.py  (+10 more)
(+293 files in other folders)
