[project]
name = "job-spy-tw"
version = "0.1.0"
description = "Taiwan job crawler and skill insights dashboard for 104, 1111, and LinkedIn."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Authlib>=1.3.2",
  "beautifulsoup4>=4.12.3",
  "certifi>=2026.2.25",
  "lxml>=5.3.0",
  "openai>=2.26.0",
  "pandas>=2.2.3",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "streamlit>=1.44.1",
]

[project.scripts]
job-spy = "job_spy_tw.cli:main"
job-radar-line-webhook = "job_spy_tw.line_webhook:main"
job-radar-crawl-worker = "job_spy_tw.crawl_worker:main"
job-radar-crawl-scheduler = "job_spy_tw.crawl_scheduler:main"
job-radar-runtime-maintenance = "job_spy_tw.runtime_maintenance:main"
job-radar-sqlite-maintenance = "job_spy_tw.sqlite_backup:main"
job-radar-sqlite-restore-drill = "job_spy_tw.sqlite_restore_drill:main"
job-radar-backend-maintenance = "job_spy_tw.backend_maintenance:main"
job-radar-backend-status = "job_spy_tw.backend_status:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
